feat: css optimize

--- a/layout/casper/head.ejs
+++ b/layout/casper/head.ejs
@@ -35,8 +35,7 @@
 	  <% if (theme.highlightjs) { %>
     <link rel="stylesheet" href="<%- config.root %>highlightjs/<%- theme.highlightjs %>.css" type="text/css">
     <% } %>
-    
-
+    <link rel="apple-touch-icon" href="<%- config.root %>img/favicon.ico"> 
     <!-- Custom stylesheet, (add custom styles here, always load last) -->
     <!-- Load our stylesheet for IE8 -->
     <!--[if IE 8]>
