--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -192,7 +192,7 @@ h1 span,h2 span,h3 span,h4 span,h5 span,h6 span,.navbar .nav > li > span {
 		border:1px solid #ebebeb;
 		padding:5px;
 		text-align: center;
-		border-radius: 5px;
+		border-radius: $border-radius-base;
 		box-shadow:1px 1px 2px #969696;
 		background-color: #fff;
 	}
@@ -605,7 +605,7 @@ button.navbar-toggle .icon-bar {
 			padding:0 15px;
 			color:#fc6423;
 			border:1px solid #fc6423;
-			border-radius: 4px;
+			border-radius: $border-radius-base;
 			line-height: 1.8;
 			font-size: 16px;
 			margin-top: 20px;
@@ -874,28 +874,7 @@ footer {
 		}
 	}
 }
-/*return-top*/
-.return-top{
-	opacity: 1;
-	position: fixed;
-	bottom: 132px;
-	right:20px;
-	z-index: 10;
-	display: none;
-	.btn-return-top{
-		opacity: 0.5;
-		display: block;
-		width:38px;
-		height:38px;
-		border-radius: 5px;
-		border:0px;
-		cursor: pointer;
-		position: relative;
-		&:hover{
-			opacity: 1;
-		}
-	}
-}
+
 pre{
 	.line{
 		.label{
@@ -926,7 +905,7 @@ pre{
 	width:860px;
 	padding:10px;
 	border:1px solid hsla(0,0%,0%,0.25);
-	border-radius: 5px;
+	border-radius: $border-radius-base;
 	box-shadow:0 0 18px rgba(0,0,0,0.4);
 	background-color: $White;
 	.egg-header{
