--- a/layout/casper/footer.ejs
+++ b/layout/casper/footer.ejs
@@ -21,21 +21,20 @@
                 </p>
             </div>
             <div class="copy">
-                <p style="margin:0">
+                <p>
                     &copy; 2014<script>new Date().getFullYear()>2010&&document.write("-"+new Date().getFullYear());</script>, Content By <%- config.author %>. All Rights Reserved.
                 </p>
-                <p style="margin:0">
-                    <span id="busuanzi_container_site_pv" style="font-size:12px;color:#767D84;">
+                <p>
+                    <span id="busuanzi_container_site_pv">
                         This site already had <span id="busuanzi_value_site_pv"></span> Visits by
                     </span>
-                    <span id="busuanzi_container_site_uv" style="font-size:12px;color:#767D84;">
+                    <span id="busuanzi_container_site_uv">
                         <span id="busuanzi_value_site_uv"></span> Visitors 
                     </span>
                 </p>
-                <p style="margin:0">
+                <p>
                     Powered by <a href="https://hexo.io/zh-cn/">Hexo</a> and theme By <a href="https://github.com/yangzj1992/TKL-REVISION">Kieran</a>
                 </p>
-                
             </div>
             <div class="social">
                 <ul>
