--- a/layout/casper/header.ejs
+++ b/layout/casper/header.ejs
@@ -77,7 +77,7 @@
 
         <!-- ============================ Header & Logo bar =========================== -->
 
-        <div id="navigation" class="navbar navbar-fixed-top" style="border:0">
+        <div id="navigation" class="navbar navbar-fixed-top">
             <div class="navbar-inner">
                 <div class="container">
                     <!-- Nav logo -->
