--- a/layout/casper/post/navigation.ejs
+++ b/layout/casper/post/navigation.ejs
@@ -1,6 +1,6 @@
 <nav class="pagination" role="pagination">
     <% if (page.prev) { %>
-    <a class="pull-left" href="<%- url_for(page.prev.path) %>" style="float: left;">
+    <a class="pull-left" href="<%- url_for(page.prev.path) %>">
         ← <%- page.prev.title %>
     </a>
     <% } %>
