feat: css error

--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -894,8 +894,9 @@ pre{
 }
 
 .duoshuo,.pagination,.nogutter{
-		text-align: center;
-		margin:0 auto;
+	width: 64%;
+	text-align: center;
+	margin:0 auto;
 }
 .nogutter{
 	width: 100%;
