feat: mobile view update

--- a/layout/casper/archive.ejs
+++ b/layout/casper/archive.ejs
@@ -20,7 +20,7 @@ if(page.archive) {
 <section id="services">
     <div class="container article-list">
         <div class="row">
-            <div class="col-md-2">
+            <div class="col-md-2 category_index">
               <div class="row">
                 <h3><%= title %></h3>
                 <% if (page.category){ %>
