--- a/layout/casper/categories.ejs
+++ b/layout/casper/categories.ejs
@@ -12,7 +12,7 @@ title = "目录";
 <section id="services">
     <div class="container article-list">
         <div class="row">
-            <div class="col-md-2">
+            <div class="col-md-2 category_index">
               <div class="row">
                 <h3><%= title %></h3>
                 <%- list_categories() %>
