--- a/layout/casper/tags.ejs
+++ b/layout/casper/tags.ejs
@@ -11,7 +11,7 @@ title = "标签";
 <section id="services">
     <div class="container article-list">
         <div class="row">
-            <div class="col-md-2">
+            <div class="col-md-2 category_index">
               <div class="row">
                 <h3><%= title %></h3>
                 <%- list_tags() %>
