feat: sidebar img lazyload & code optimization

--- a/layout/casper/header.ejs
+++ b/layout/casper/header.ejs
@@ -1,12 +1,11 @@
 <!-- ============================ Off-canvas navigation =========================== -->
-    
     <div class="sb-slidebar sb-right sb-style-overlay sb-momentum-scrolling">
         <div class="sb-close" aria-label="Close Menu" aria-hidden="true">
           <i class="demo-icon icon-cancel-2">&#xe824;</i>
         </div>
         <div class="site-overview">
            <div class="site-author">
-               <img class="site-author-img" width="100px" height="100px" src="http://qcyoung.qiniudn.com/qcyoung/avatar.jpg"></img>
+               <img class="site-author-img" width="100px" height="100px" data-src="http://qcyoung.qiniudn.com/qcyoung/avatar.jpg"></img>
                <div class="site-author-name"><%= config.author%></div>
            </div>
            <div class="sb-list">
@@ -63,7 +62,7 @@
 
       <div class="cc-license">
         <a href="http://creativecommons.org/licenses/by-nc/4.0">
-          <img src="http://qcyoung.qiniudn.com/qcyoung/cc-by-nc.svg">
+          <img data-src="http://qcyoung.qiniudn.com/qcyoung/cc-by-nc.svg">
         </a>
       </div>
     </div>
