--- a/layout/casper/archive.ejs
+++ b/layout/casper/archive.ejs
@@ -72,7 +72,7 @@ if(page.archive) {
 <script>
 $(function() {
     $(".element-img").css('display','none');
-    $(".article-list").css('min-height',$(window).height()-$("footer").height()-$("#statement").height()-$("#navigation").height()-50);
+    $(".article-list").css('min-height',$(window).height() - $("footer").height() - $("#statement").height() - $("#navigation").height() - 50);
     $(".archive-list-count").addClass("badge");
     $(".category-list-count").addClass("badge");
     $(".tag-list-count").addClass("badge");
