--- a/layout/casper/tags.ejs
+++ b/layout/casper/tags.ejs
@@ -55,10 +55,9 @@ title = "标签";
 <script>
 $(function() {
     $(".element-img").css('display','none');
-    $(".article-list").css('min-height',$(window).height()-$("footer").height()-$("#statement").height()-$("#navigation").height()-50);
+    $(".article-list").css('min-height',$(window).height() - $("footer").height() - $("#statement").height() - $("#navigation").height() - 50);
     $(".archive-list-count").addClass("badge");
     $(".category-list-count").addClass("badge");
     $(".tag-list-count").addClass("badge");
-
 });
 </script>
