--- a/layout/casper/archive.ejs
+++ b/layout/casper/archive.ejs
@@ -1,80 +1,83 @@
 <%
 var title = '';
 if(page.category) {
-    title = "分类";
+  title = "分类";
 }
 if(page.tag) {
-    title = "标签";
+  title = "标签";
 }
 if(page.archive) {
-    title = "归档";
+  title = "归档";
 }
 %>
 <% if (pagination == 2){ %>
   <% page.posts.each(function(item){ %>
     <%- partial('article', {item: item, index: true}) %>
   <% }); %>
-
   <%- partial('pagination') %>
 <% } else { %>
-<section id="services">
+  <section id="services">
     <div class="container article-list">
-        <div class="row">
-            <div class="col-md-2 category_index">
-              <div class="row">
-                <h3><%= title %></h3>
-                <% if (page.category){ %>
-                <%- list_categories() %>
-                <% }%>
-                <% if (page.tag){ %>
-                <%- list_tags() %>
-                <% }%>
-                <% if (page.archive){ %>
-                <%- list_archives() %>
-                <% }%>
-              </div>
-            </div>
-            <div class="col-md-9 col-md-offset-1">
-                <div class="row">
-                    <% var i=0 %>
-                    <% page.posts.each(function(item){ %>
-                        <% if(i==4){ %>
-                            </div><div class="row boxes">
-                            <% i=0 %>
-                        <% } %>
-                        <% i++ %>
-                        <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 wow fadeInUp" data-wow-delay="0.3s">
-                            <% if (item.link){ %>
-                            <% if (item.title){ %>
-                              <h4 class="title link"><a href="<%- item.link %>" target="_blank"><%= item.title %></a></h4>
-                            <% } else { %>
-                              <h4 class="title link"><a href="<%- item.link %>" target="_blank"><%= item.link %></a></h4>
-                            <% } %>
-                            <% } else { %>
-                              <h4 class="title"><a href="<%- config.root %><%- item.path %>"><%= item.title %></a></h4>
-                            <% } %>
-                            <p><time datetime="<%= item.date.toDate().toISOString() %>"><a href="<%- config.root %><%- item.path %>"><%= item.date.format(config.date_format) %></a></time></p>
-                        </div>
-                    <% }); %>
-                </div>
-            </div>    
+      <div class="row">
+        <div class="col-md-2 category_index">
+          <div class="row">
+            <h3><%= title %></h3>
+            <% if (page.category){ %>
+              <%- list_categories() %>
+            <% }%>
+            <% if (page.tag){ %>
+              <%- list_tags() %>
+            <% }%>
+            <% if (page.archive){ %>
+              <%- list_archives() %>
+            <% }%>
+          </div>
         </div>
+        <div class="col-md-9 col-md-offset-1">
+          <div class="row">
+            <% var i=0 %>
+            <% page.posts.each(function(item){ %>
+              <% if(i==4){ %>
+                </div><div class="row boxes">
+                <% i=0 %>
+              <% } %>
+              <% i++ %>
+              <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 wow fadeInUp" data-wow-delay="0.3s">
+                <% if (item.link){ %>
+                  <% if (item.title){ %>
+                    <h4 class="title link"><a href="<%- item.link %>" target="_blank"><%= item.title %></a></h4>
+                  <% } else { %>
+                    <h4 class="title link"><a href="<%- item.link %>" target="_blank"><%= item.link %></a></h4>
+                  <% } %>
+                <% } else { %>
+                  <h4 class="title"><a href="<%- config.root %><%- item.path %>"><%= item.title %></a></h4>
+                <% } %>
+                <p>
+                  <time datetime="<%= item.date.toDate().toISOString() %>">
+                    <a href="<%- config.root %><%- item.path %>"><%= item.date.format(config.date_format) %></a>
+                  </time>
+                </p>
+              </div>
+            <% }); %>
+          </div>
+        </div>    
+      </div>
     </div>
-</section> 
+  </section> 
 <% } %>
 <section id="statement">
-    <div class="container text-center wow fadeInUp" data-wow-delay="0.5s">
-        <div class="row">
-            <p><%- theme.bottom_saying %></p>
-        </div>
+  <div class="container text-center wow fadeInUp" data-wow-delay="0.5s">
+    <div class="row">
+      <p><%- theme.bottom_saying %></p>
     </div>
+  </div>
 </section>
 <script>
 $(function() {
-    $(".element-img").css('display','none');
-    $(".article-list").css('min-height',$(window).height() - $("footer").height() - $("#statement").height() - $("#navigation").height() - 50);
-    $(".archive-list-count").addClass("badge");
-    $(".category-list-count").addClass("badge");
-    $(".tag-list-count").addClass("badge");
+  $(".element-img").css('display','none');
+  $(".article-list").css('min-height',$(window).height() - $("footer").height() - $("#statement").height() - $("#navigation").height() - 50);
+  $(".archive-list-count").addClass("badge");
+  $(".category-list-count").addClass("badge");
+  $(".tag-list-count").addClass("badge");
 });
 </script>
