--- a/layout/casper/post/meta.ejs
+++ b/layout/casper/post/meta.ejs
@@ -1,15 +1,14 @@
 <span class='post-meta'>
-      <time datetime='<%= date_xml(post.date) %>' itemprop='datePublished'>
-          <%= date(post.date, null) %>
-      </time>
-    <% if (post.tags && post.tags.length){ %>
-    <% count = post.tags.length %>
-    | <% post.tags.forEach(function(tag, index) { %>
-    <a class='index-post-tags' href='<%= config.root + tag.path %>'><%= tag.name %> </a><% if (count !== index+1) { %>,<% } %>
+  <time datetime='<%= date_xml(post.date) %>' itemprop='datePublished'>
+    <%= date(post.date, null) %>
+  </time>
+  <% if (post.tags && post.tags.length){ %>
+    <% count = post.tags.length %> | <% post.tags.forEach(function(tag, index) { %>
+      <a class='index-post-tags' href='<%= config.root + tag.path %>'><%= tag.name %></a>
+      <% if (count !== index+1) { %>,<% } %>
     <% }); %>
-    <% } %>
-</span>
-| 
+  <% } %>
+</span> | 
 <span class="article-comment">
   <a class='disqus-comment-count' href="<%= config.root + post.path %>#disqus_thread" data-disqus-url="<%= config.root + post.path %>"></a>
 </span>
