feat: logic update

--- a/layout/casper/about.ejs
+++ b/layout/casper/about.ejs
@@ -20,7 +20,6 @@
 </section>
 <script>
 $(function() {
-  $(".element-img").css('display','none');
-  $(".about-content").css('min-height',$(window).height()-$("footer").height()-$("#navigation").height()-30);
+  $(".about-content").css('min-height',$(window).height() - $("footer").height() - $("#navigation").height() - 30);
 });
 </script>
