--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -385,7 +385,10 @@ input[placeholder],
 	.nav{
 		width:100%;
 		text-align:center;
-		height:50px;		
+		height:50px;
+		.welcome{
+			cursor: pointer;
+		}		
 	}
 	.nav > li {
 		float:none;
