feat: add throttle function

--- a/layout/casper/footer.ejs
+++ b/layout/casper/footer.ejs
@@ -27,7 +27,7 @@
         </span>
       </p>
       <p>
-        Powered by <a href="https://hexo.io/zh-cn/">Hexo</a> and theme By <a href="https://github.com/yangzj1992/TKL-REVISION">Kieran</a>
+        Powered by <a href="https://hexo.io/zh-cn/">Hexo</a> and theme By <a href="https://github.com/yangzj1992/TKL-REVISION">TKL-REVISION</a>
       </p>
     </div>
     <div class="social">
